# verdict

./: .gitattributes  .gitignore  LICENSE  README.md  process-notes.md  pyproject.toml
cases/clean/: config.ini  readme.txt
cases/smoke/: NTUSER.DAT.LOG1  NTUSER.DAT{a1fa7a98-662b-11f1-833c-8c1d9618b360}.TM.blf  NTUSER.DAT{a1fa7a98-662b-11f1-833c-8c1d9618b360}.TMContainer00000000000000000001.regtrans-ms  Security.evtx  System.evtx  UPDATE.EXE-021C1382.pf  invoice_2020.txt
docs/: accuracy-report.md  architecture-dataflow.mmd  architecture.md  architecture.mmd  checklist.md  dataset.md  devpost-story.md  ground-truth.md  learner-profile.md  prd.md  scope.md  spec.md
docs/execution-logs/: README.md  findings-szechuan-run1.json  findings-szechuan-run2.json  ledger-smoke-demo.jsonl  ledger-szechuan-run1.jsonl  ledger-szechuan-run2.jsonl  report-run2.html  run2-metadata.json  szechuan-transcript-run1.txt  szechuan-transcript-run2.txt
rules/: smoke.yar
scripts/: checkpoint2-check.py  day1-gate.sh  get-dataset.sh  make-smoke-case.ps1
tests/: agent_check.py  foundation_check.py  image_tools_check.py  orchestrator_check.py  report_check.py  tools_check.py  verifier_check.py
verdict/: __init__.py  budget.py  cli.py  findings.py  mcp_client.py  terminal.py
verdict/agent/: __init__.py  loop.py  prompts.py  triage.py  verifier.py
verdict/report/: __init__.py  generator.py  template.html.j2
verdict_mcp/: __init__.py  __main__.py  binaries.py  ledger.py  pathguard.py  runner.py  server.py
verdict_mcp/tools/: __init__.py  _image_helpers.py  artifacts.py  common.py  (+10 more)
