[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "verdict"
version = "0.1.0"
description = "Autonomous DFIR investigation agent - every finding cited, every action audited, zero hallucinated evil"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "prabhakaran-jm" }]
dependencies = [
    "anthropic",
    "mcp<2",
    "pydantic>=2",
    "rich",
    "jinja2",
    "typer",
]

[project.scripts]
verdict = "verdict.cli:app"

[tool.setuptools]
packages = [
    "verdict",
    "verdict.agent",
    "verdict.report",
    "verdict_mcp",
    "verdict_mcp.tools",
]

[tool.setuptools.package-data]
"verdict.report" = ["*.j2"]
